--- a/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
+++ b/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
@@ -40,9 +40,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CursorStyle.cs" />
+    <Compile Include="Internal\CommandPacket.cs" />
+    <Compile Include="Internal\CommandPacketParser.cs" />
+    <Compile Include="Internal\CommandType.cs" />
+    <Compile Include="Internal\PacketType.cs" />
+    <Compile Include="Internal\SerialConnection.cs" />
+    <Compile Include="KeyFlags.cs" />
+    <Compile Include="LcdBaudRate.cs" />
     <Compile Include="LcdDevice.cs" />
+    <Compile Include="LocationCode.cs" />
     <Compile Include="PowerOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemperatureDisplayItemType.cs" />
+    <Compile Include="TemperatureUnits.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
