Added exceptions, 9600 baud is default

--- a/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
+++ b/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
@@ -41,6 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CursorStyle.cs" />
+    <Compile Include="PacketParseException.cs" />
+    <Compile Include="DeviceConnectionException.cs" />
+    <Compile Include="DeviceCommandException.cs" />
+    <Compile Include="DeviceTimeoutException.cs" />
+    <Compile Include="DeviceResponseException.cs" />
     <Compile Include="Internal\CommandPacket.cs" />
     <Compile Include="Internal\CommandPacketParser.cs" />
     <Compile Include="Internal\CommandPacketResponseReceivedEventArgs.cs" />
