--- a/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
+++ b/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
@@ -47,12 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClearOp.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FirmwareOp.cs" />
     <Compile Include="ListenOp.cs" />
     <Compile Include="PingOp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadUserFlashOp.cs" />
+    <Compile Include="RebootOp.cs" />
+    <Compile Include="SetBootStateOp.cs" />
     <Compile Include="WriteUserFlashOp.cs" />
   </ItemGroup>
   <ItemGroup>
