Add set line one and two

--- a/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
+++ b/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
@@ -57,6 +57,8 @@
     <Compile Include="ReadUserFlashOp.cs" />
     <Compile Include="RebootOp.cs" />
     <Compile Include="SetBootStateOp.cs" />
+    <Compile Include="SetLineOneOp.cs" />
+    <Compile Include="SetLineTwoOp.cs" />
     <Compile Include="WriteUserFlashOp.cs" />
   </ItemGroup>
   <ItemGroup>
