--- a/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
+++ b/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{655A95BC-E1BD-46B0-AE02-79518F2DEDC2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cfa533Rs232Tool</RootNamespace>
+    <RootNamespace>Petrsnd.Cfa533Rs232Tool</RootNamespace>
     <AssemblyName>Cfa533Rs232Tool</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -47,19 +47,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClearOp.cs" />
+    <Compile Include="Operations\ClearOp.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="FirmwareOp.cs" />
-    <Compile Include="ListenOp.cs" />
-    <Compile Include="PingOp.cs" />
+    <Compile Include="Operations\FirmwareOp.cs" />
+    <Compile Include="Operations\ListenOp.cs" />
+    <Compile Include="Operations\PingOp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadUserFlashOp.cs" />
-    <Compile Include="RebootOp.cs" />
-    <Compile Include="SetBootStateOp.cs" />
-    <Compile Include="SetLineOneOp.cs" />
-    <Compile Include="SetLineTwoOp.cs" />
-    <Compile Include="WriteUserFlashOp.cs" />
+    <Compile Include="Operations\ReadUserFlashOp.cs" />
+    <Compile Include="Operations\RebootOp.cs" />
+    <Compile Include="Operations\SetBootStateOp.cs" />
+    <Compile Include="Operations\SetLineOneOp.cs" />
+    <Compile Include="Operations\SetLineTwoOp.cs" />
+    <Compile Include="Operations\WriteUserFlashOp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
