--- a/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
+++ b/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
@@ -47,8 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Operations\BacklightOp.cs" />
     <Compile Include="Operations\ClearOp.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Operations\ContrastOp.cs" />
     <Compile Include="Operations\CursorPositionOp.cs" />
     <Compile Include="Operations\CursorStyleOp.cs" />
     <Compile Include="Operations\FirmwareOp.cs" />
