--- a/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
+++ b/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Operations\FirmwareOp.cs" />
     <Compile Include="Operations\ListenOp.cs" />
     <Compile Include="Operations\PingOp.cs" />
+    <Compile Include="Operations\SendDataOp.cs" />
+    <Compile Include="Operations\SetContentsOp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Operations\ReadUserFlashOp.cs" />
