--- a/Cfa533Rs232Demo/packages.config
+++ b/Cfa533Rs232Demo/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="Serilog" version="2.4.0" targetFramework="net461" />
+  <package id="Serilog.Enrichers.Thread" version="3.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Literate" version="2.1.0" targetFramework="net461" />
 </packages>
