Added interface and documentation

--- a/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
+++ b/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CursorStyle.cs" />
+    <Compile Include="ILcdDevice.cs" />
     <Compile Include="PacketParseException.cs" />
     <Compile Include="DeviceConnectionException.cs" />
     <Compile Include="DeviceCommandException.cs" />
