--- a/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
+++ b/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalOptionsBase.cs" />
+    <Compile Include="IOp.cs" />
     <Compile Include="Operations\BacklightOp.cs" />
     <Compile Include="Operations\ClearOp.cs" />
     <Compile Include="Extensions.cs" />
@@ -58,6 +60,7 @@
     <Compile Include="Operations\PingOp.cs" />
     <Compile Include="Operations\SendDataOp.cs" />
     <Compile Include="Operations\SetContentsOp.cs" />
+    <Compile Include="OpRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Operations\ReadUserFlashOp.cs" />
