--- a/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
+++ b/Cfa533Rs232Tool/Cfa533Rs232Tool.csproj
@@ -1,87 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{655A95BC-E1BD-46B0-AE02-79518F2DEDC2}</ProjectGuid>
+    <TargetFramework>net7.0</TargetFramework>
     <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Petrsnd.Cfa533Rs232Tool</RootNamespace>
-    <AssemblyName>Cfa533Rs232Tool</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CommandLine, Version=2.0.275.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommandLineParser.2.1.1-beta\lib\net45\CommandLine.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
+    <ProjectReference Include="..\Cfa533Rs232Driver\Cfa533Rs232Driver.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GlobalOptionsBase.cs" />
-    <Compile Include="IOp.cs" />
-    <Compile Include="Operations\BacklightOp.cs" />
-    <Compile Include="Operations\ClearOp.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Operations\ContrastOp.cs" />
-    <Compile Include="Operations\CursorPositionOp.cs" />
-    <Compile Include="Operations\CursorStyleOp.cs" />
-    <Compile Include="Operations\FirmwareOp.cs" />
-    <Compile Include="Operations\ListenOp.cs" />
-    <Compile Include="Operations\PingOp.cs" />
-    <Compile Include="Operations\SendDataOp.cs" />
-    <Compile Include="Operations\SetBaudRateOp.cs" />
-    <Compile Include="Operations\SetContentsOp.cs" />
-    <Compile Include="OpRunner.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Operations\ReadUserFlashOp.cs" />
-    <Compile Include="Operations\RebootOp.cs" />
-    <Compile Include="Operations\SetBootStateOp.cs" />
-    <Compile Include="Operations\SetLineOneOp.cs" />
-    <Compile Include="Operations\SetLineTwoOp.cs" />
-    <Compile Include="Operations\WriteUserFlashOp.cs" />
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Cfa533Rs232Driver\Cfa533Rs232Driver.csproj">
-      <Project>{d4265574-93af-4c7a-b6c9-83c1a6b3c245}</Project>
-      <Name>Cfa533Rs232Driver</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
