--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: 1.0.{build}
 branches:
   only:
-  - main
+  - master
 image: Visual Studio 2022
 configuration: Release
 platform: Any CPU
