--- a/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
+++ b/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
@@ -6,7 +6,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Authors>petrsnd@gmail.com</Authors>
     <Company>petrsnd</Company>
-    <Copyright>(c) 2022 Daniel F. Peterson &lt;petrsnd@gmail.com&gt;</Copyright>
+    <Copyright>(c) 2023 Daniel F. Peterson &lt;petrsnd@gmail.com&gt;</Copyright>
     <Description>C# Driver for CrystalFontz CFA533 family of 16x2 LCD displays, RS232 inteface; Developed against the CFA533-TMI-KU</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/petrsnd/Cfa533Rs232</PackageProjectUrl>
@@ -17,7 +17,7 @@
     <RepositoryType>git</RepositoryType>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <PackageReleaseNotes>CFA533 RS232 .NET Standard 2.0 driver. Most of the LCD commands have been implemented in this release, but the host power management and monitoring features have not been implemented.</PackageReleaseNotes>
+    <PackageReleaseNotes>Updated to .NET Standard 2.0! CFA533 RS232 driver. Most of the LCD commands have been implemented. The host power management and monitoring features have not been implemented.</PackageReleaseNotes>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
   
