--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,16 @@
-version: 2.0.{build}
+version: 1.0.{build}
 branches:
   only:
   - master
 image: Visual Studio 2022
 configuration: Release
-assembly_info:
+dotnet_csproj:
   patch: true
-  file: '**\AssemblyInfo.*'
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
   assembly_version: '{version}'
-  assembly_file_version: '{version}'
+  file_version: '{version}'
   assembly_informational_version: '{version}'
 before_build:
 - ps: nuget restore Cfa533Rs232.sln
