--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ dotnet_csproj:
   package_version: '{version}'
   assembly_version: '{version}'
   file_version: '{version}'
-  assembly_informational_version: '{version}'
+  informational_version: '{version}'
 before_build:
 - ps: nuget restore Cfa533Rs232.sln
 build:
