--- a/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
+++ b/Cfa533Rs232Driver/Cfa533Rs232Driver.csproj
@@ -39,5 +39,9 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
