--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,25 +1,31 @@
-version: 1.0.{build}
+version: 1.1.0-dev-{build}
 branches:
   only:
   - master
+skip_commits:
+  files:
+    - README.md
 image: Visual Studio 2022
 configuration: Release
-dotnet_csproj:
-  patch: true
-  file: '**\*.csproj'
-  version: '{version}'
-  package_version: '{version}'
-  assembly_version: '{version}'
-  file_version: '{version}'
-  informational_version: '{version}'
 before_build:
-- ps: nuget restore Cfa533Rs232.sln
+- ps: '& .\appveyor-prebuild.ps1'
 build:
+  project: Cfa533Rs232.sln
   publish_nuget: true
+  publish_nuget_symbols: true
+  use_snupkg_format: true
+  parallel: true
   verbosity: normal
 deploy:
 - provider: NuGet
   api_key:
-    secure: hCf3CYxDjjUdIeMlGv38eURitGnfsq5AvhEUOTPTATxqzROOjBbHm/mkRyvfocYD
-  on:
-    branch: master
+    secure: Sz7kT1QLRqAyGmL+IiJdhRm0aDu7vmaZcyVnP6AJ2cu//4EOrPm6BaRxFZrvz7ex
+notifications:
+- provider: Email
+  to:
+  - petrsnd@gmail.com
+  subject: Cfa533Rs232 build is failing
+  on_build_success: false
+  on_build_failure: true
+  on_build_status_changed: false
+
