--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
-version: 1.1.0-dev-{build}
+version: 1.1.0-release-{build}
 branches:
   only:
   - master
+  - release-1.1
 skip_commits:
   files:
     - README.md
